<resources>
    <string name="app_name">practica_3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="num1">Numero1:</string>
    <string name="num2">Numero2:</string>
    <string name="circulo">Círculo</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="triangulo">Triángulo</string>
    <string name="ingreseRadio">Radio (cm): </string>
    <string name="ingreseLado">Lado (cm): </string>
    <string name="ingreseBase">Base (cm): </string>
    <string name="ingreseAltura">  altura (cm): </string>
    <string name="ingreseLadoa">Lado a (cm): </string>
    <string name="ingreseLadob">  Lado b (cm): </string>
    <string name="resultado">Resultado:</string>
</resources>
